<resources>
    <string name="app_name">Blank</string>
    <string name="app_tags">NewsBean</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_talk">TalkActivity</string>


    <string name="no_mail_app">没有安装邮件类App</string>
    <string name="sdk_version">SDK版本:</string>
    <string name="device_model">设备型号:</string>
    <string name="mail_subject">FakeNews使用反馈于建议</string>
    <string name="mail_account">mailto:wwnje@wwnje.com</string>

    <string name="got_it">好的</string>
    <string name="action_copyright">声明</string>t

    <string name="copyright_content">
        fakenews所使用资源若有侵权可告知以便及时删除\n
        Beta版本问题较多若发现Bug可在侧栏about\n
        提交建议 应该是最后一次beta版本了\n
        本次更新包括UI更改,图片缓存加入\n
        加入用户手机端分享文章测试\n
        感谢你的使用\n\nAndroid 5.0以下在浏览新闻时\n
        可能界面有不稳定的现象
    </string>

    <string name="loading">加载中…</string>

    <!-- browserActivity-->
    <string name="share_to">分享给</string>
    <string name="what_1">文章缺失</string>
    <string name="what_2">文章排版有错</string>
    <string name="article">文章：</string>
    <string name="title">标题：</string>


    <!--nav-->
    <string name="no_market_app">没有安装市场类App</string>
    <string name="versionName">当前版本: v1.3.1</string>
    <string name="v_score">评分建议</string>
    <string name="v_bug">提交问题</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string name="title_activity_twenty">TwentyActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--tags name-->
    <string name="bookmark">BookMark</string>
    <string name="bookmarked">BookMarked</string>
    <string name="type">类别</string>
    <string name="finder">finder</string>
    <string name="desc">玛丽安，事情发生在我们真的非常老、我们的身体正在散架的时候，我觉得我很快会随你而去。如果你伸出双手，你会发现我就在你身后很近很近的地方，我想你能碰到我的手。你知道我一直爱着你，因为你的美貌，你的聪慧，我不需要说更多的了，因为你都知道。但是现在，我只想祝福你旅途愉快。再见亲爱的朋友。永无止尽的爱，我们在道路尽头见。”	字数不超过200“玛丽安，事情发生在我们真的非常老、我们的身体正在散架的时候，我觉得我很快会随你而去。如果你伸出双手，你会发现我就在你身后很近很近的地方，我想你能碰到我的手。你知道我一直爱着你，因为你的美貌，你的聪慧，我不需要说更多的了，因为你都知道。但是现在，我只想祝福你旅途愉快。再见亲爱的朋友。永无止尽的爱，我们在道路尽头见。”	字数不超过178把为什么会那么多呢</string>
    <string name="eg_title">关卡、难度与叙事：献给神秘海域的花束关卡、难度与叙事：献给神秘海域的花束不超过41</string>
    <string name="date">10 days ago</string>

    <!--侧边栏目录-->
    <string name="nav_bookmark">书签:</string>
    <string name="nav_likelist">喜欢列表:</string>
    <string name="nav_me">Blank:</string>
    <string name="nav_tags">所有标签:</string>
    <string name="nav_my_tags">我订阅的标签:</string>
    <string name="nav_types">类型:</string>
    <string name="nav_history">查看历史:</string>
    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
