<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_movie_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:clickable="true"
    app:cardCornerRadius="2dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/tvLogo"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_menu_gallery"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:textSize="13sp"
                    android:text="@string/finder"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="10sp"
                    android:text="@string/date"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/black" />
            </LinearLayout>

        </LinearLayout>

       <!-- <com.android.volley.toolbox.NetworkImageView
            android:id="@+id/ivPic"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop" />-->
        <ImageView
            android:id="@+id/ivPic"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop" />

        <!--等图像缓存做了 再wrap-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="0dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:paddingTop="2dp"
                android:textSize="17sp"
                android:text="@string/eg_title"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textColor="@color/black"/>

            <TextView
                    android:id="@+id/tvDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/desc"
                    android:layout_marginTop="3dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/black"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">
                <TextView
                    android:id="@+id/tv_type"
                    android:text="@string/type"
                    android:textColor="@color/green"
                    android:layout_alignParentLeft="true"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"/>
                <Button
                    android:id="@+id/btn_bookmark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:text="@string/bookmark"
                    android:background="@drawable/btn_bookmark_style_pressed"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
            <!--TODO bookmark Style-->
            <!--android:background="@drawable/btn_bookmark_style_bg"
            android:textColor="@drawable/btn_bookmark_style_color"-->

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>

